[tool.poetry]
name = "nuitka-load-module-regression"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <aders1234@gmail.com>"]
readme = "README.md"
packages = [{include = "nuitka_load_module_regression"}]

[tool.poetry.dependencies]
python = "^3.10"
nuitka = "^1.1.3"
watchfiles = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
