[tool.poetry]
name = "nuitka-compile-libcst-bug"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <aders1234@gmail.com>"]
readme = "README.md"
packages = [{include = "nuitka_compile_libcst_bug"}]

[tool.poetry.dependencies]
python = "^3.10"
Nuitka = { git = "https://github.com/Nuitka/Nuitka.git", branch = "hotfix/1.3.6" }
libcst = "^0.4.9"


[tool.poetry.group.dev.dependencies]
ordered-set = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
